--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -840,7 +840,11 @@
     "                loss_collection=loss_collection,\n",
     "                reduction=reduction)\n",
     "\n",
-    "    return loss"
+    "    return loss\n",
+    "\n",
+    "    #here we evaluate the losses sustained by the model, as well as \n",
+    "    #defining a class to feed all data to the neural network layers\n",
+    "    #and specifying basic params like batch_size"
    ]
   },
   {
@@ -959,7 +963,12 @@
     "            data[k] = v\n",
     "        self._log_and_write(self._next_step - 1, data)\n",
     "        del self._data\n",
-    "        self._writer.flush()"
+    "        self._writer.flush()\n",
+    "        # to evaluate performance of neural network with cindex\n",
+    "        # this alg will allow us to associate a value [0,1] where\n",
+    "        # 0 is no accuracy in predicting any events\n",
+    "        # 0.5 is similar to a coinflip\n",
+    "        # and 1 is an incredibly accurate event predictor"
    ]
   },
   {
@@ -1052,7 +1061,8 @@
     "    save_checkpoints_steps=train_spec.input_fn.steps_per_epoch(),\n",
     ")\n",
     "\n",
-    "estimator = tf.estimator.Estimator(model_fn, config=config, params=params)"
+    "estimator = tf.estimator.Estimator(model_fn, config=config, params=params)\n",
+    "# defining the model with its layers here"
    ]
   },
   {
@@ -1171,7 +1181,8 @@
     }
    ],
    "source": [
-    "tf.estimator.train_and_evaluate(estimator, train_spec, eval_spec)"
+    "tf.estimator.train_and_evaluate(estimator, train_spec, eval_spec)\n",
+    "# training starts here"
    ]
   },
   {
@@ -1220,7 +1231,8 @@
     "train_predictions = np.array([float(pred[\"risk_score\"])\n",
     "                              for pred in estimator.predict(train_pred_fn)])\n",
     "\n",
-    "breslow = BreslowEstimator().fit(train_predictions, event_train, time_train)"
+    "breslow = BreslowEstimator().fit(train_predictions, event_train, time_train)\n",
+    "# breslow is usually for getting the predicted survival functions from the model "
    ]
   },
   {
@@ -1268,7 +1280,10 @@
     "plt.ylim(0, 1)\n",
     "plt.ylabel(\"Probability of survival $P(T > t)$\")\n",
     "plt.xlabel(\"Time $t$\")\n",
-    "plt.grid()"
+    "plt.grid()\n",
+    "# plot of all classes [0,9] and their respective probability of survival vs time\n",
+    "# it looks like the model did okay, since it distinguished classes with different risk\n",
+    "# scores with lower probabilities of survival"
    ]
   },
   {
